# tulas

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  package.json
examples/: basic_mlx.rs  count_tokens.rs  llm_burn_mlx.rs  llm_candle.rs  llm_uzu.rs
examples/benchmark-tish/src/: main.tish
examples/count-tokens-tish/src/: main.tish
examples/llm-uzu-tish/src/: main.tish
scripts/: download-uzu-registry-model.py  download-uzu-registry-model.tish  resolve-uzu-model-path.sh
src/: lib.rs  uzu_api.rs
