[package]
name = "tish-mlx-burn"
version = "0.1.0"
edition = "2021"
description = "Apple Silicon LLM inference with Mirai Uzu (pre-built registry bundles)"
license = "MIT OR Apache-2.0"

[dependencies]
uzu = { git = "https://github.com/trymirai/uzu", branch = "main", package = "uzu", optional = true }
tokenizers = { version = "0.22", features = ["onig"], optional = true }

[features]
default = ["uzu"]
uzu = ["dep:uzu", "dep:tokenizers"]

[[example]]
name = "llm_uzu"
path = "examples/llm_uzu.rs"
required-features = ["uzu"]

[[example]]
name = "count_tokens"
path = "examples/count_tokens.rs"
required-features = ["uzu"]
