[package]
name = "tish-tulas"
version = "0.1.0"
edition = "2021"
description = "Tish and Uzu with LLama on Apple Silicon"
license = "PIF"

[dependencies]
tishlang_core = { path = "../tish/crates/tish_core" }
uzu = { git = "https://github.com/trymirai/uzu", branch = "main", package = "uzu", optional = true }
tokenizers = { version = "0.22", features = ["onig"], optional = true }

[features]
default = ["uzu"]
uzu = ["dep:uzu", "dep:tokenizers"]

[profile.release]
codegen-units = 1
lto = "thin"

